--- a/mopidy/config.json
+++ b/mopidy/config.json
@@ -3,10 +3,10 @@
     "version": "0.2.3",
     "slug": "mopidy",
     "description": "mopidy music server",
-    "url": "https://github.com/bestlibre/hassio-addons/tree/master/mopidy",
+    "url": "https://github.com/lzavoianu/hassio-addons/tree/master/mopidy",
     "startup": "application",
     "boot": "auto",
-    "image": "bestlibre/{arch}-mopidy",
+    "image": "lzavoianu/{arch}-mopidy",
     "options": {"local_scan": true,
 	        "options": []},
     "schema": {
